# wanalyze

./: .gitignore  README.md  allium-fns.loops  allium-manual.loops  allium.err  allium.loops  allium.out  allium.wat  allium_f16.wanlz  bb.ml  bb.mli  bblock.ml  bblock.mli  bubble_sort.loops  build.sh  cfg.ml  cfg.mli  code_path.ml  code_path.mli  cost.ml  cost.mli  cp.ml  cp.mli  create-cfg.sh  dune  dune-project  ebb.ml  ebb.mli  ebblock.ml  ebblock.mli  et.ml  et.mli  ex.ml  ex.mli  example.wasm  example.wat  execution.ml  execution.mli  func33-2.wat  func33.wat  (+43 more)
c_examples/: consistency.js  consistency.wasm  loop1.js  loop1.wasm  loop1.wat  simple.c  simple.out
design_notes/: analyze.txt  bblocks.txt  code_paths.txt  example.txt  loop_reduction.txt  loops  loops.txt  modules.txt  reduce_segment.txt
src/: bb.ml  cfg.ml  cfg.mli  cost.ml  cost.mli  cp.ml  cp.mli  dune  ebb.ml  ebb.mli  et.ml  et.mli  ex.ml  lb.ml  lb.mli  nexpr.mli  opcode.ml  opcode.mli  readBin.ml  ssa.ml  ssa.mli  wasm_print.ml  wm.ml  wm.mli  xbb.ml  xbb.mli
test_cases/: allium.wat  consistency.out  create-cfg.sh  create-png.sh  create-svg.sh  ebb  example.wasm  example.wat  func16.dot  func33-1.wat  func33.dot  func34.dot  hello.wasm  infs  loop1.out  loopcheck.sh  missingcosts.sh  runs.txt  runtests.sh
test_cases/1bubble_sort/: bubble_sort-e.eps  bubble_sort-wanalyze.wat  bubble_sort.csv  bubble_sort.eps  errors.txt
test_cases/allium/: allium-wanalyze.wat  allium.costs  allium.csv  allium.err  allium.out  ebb  errors.txt  out  xx.err  xx.out
test_cases/autocad/: autocad.costs  errors.txt  (+1 more)
(+28358 files in other folders)
