(lang dune 3.16)

(name wanalyze)

(generate_opam_files true)

(source
 (github jsCarleton/wanalyze))

(authors "John Shortt")

(maintainers "John Shortt")

(license MIT)

(documentation https://github/jsCarleton/wanalyze/README.md)

(package
 (name wanalyze)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
